training model again

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-geohash2==1.1
-unidecode==1.1.1
-shapely==1.7.1
-geopandas==0.8.1
-pydantic==1.6.1
-tqdm==4.42.1
-pyarrow==2.0.0
-pandas==1.0.1
 numpy==1.18.1
-pandas-profiling==2.9.0
+tqdm==4.42.1
 xgboost==1.2.1
-scikit-learn==0.22.1
-streamlit==0.69.2
+Shapely==1.7.1
+pydantic==1.6.1
+Unidecode==1.1.1
+geopandas==0.8.1
+geohash2==1.1
+pandas==1.0.1
+scikit_learn==0.23.2
+streamlit==0.71.0
+pandas-profiling==2.9.0
+pyarrow==2.0.0
+scikit-optimize==0.8.1
