--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
-mlflow==1.14.0
-streamlit==0.77.0
-geopandas==0.8.2
-numpy==1.20.1
-Unidecode==1.2.0
 pandas==1.2.2
-Shapely==1.7.1
-xgboost==1.2.1
+numpy==1.20.1
+geopandas==0.8.2
+pydantic==1.8.1
+Unidecode==1.2.0
+streamlit==0.78.0
+plotly==4.14.3
+streamlit_pandas_profiling==0.1.1
+boto3==1.16.63
+pandas_profiling==2.11.0
 geohash2==1.1
-pydantic==1.8
+Shapely==1.7.1
+mlflow==1.14.0
+xgboost==1.2.1
+tqdm==4.58.0
+fastapi==0.63.0
 scipy==1.5.3
 scikit_learn==0.23.2
 scikit_optimize==0.8.1
-tqdm==4.58.0
-pandas-profiling==2.11.0
 uvicorn==0.13.4
-fastapi==0.63.0
 pyarrow==2.0.0
